test/Programs/InvalidTests/dupDataCons/dupDataCons.fst
data T = C | C

main : T
main = C
